--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -274,6 +274,19 @@
   url       = {https://dl.acm.org/citation.cfm?id=2390580},
 }
 
+@Article{Ackland1986,
+  author    = {Ackland, M.},
+  title     = {Plot and Counter-Plot in Charles Harpur's The Bushrangers},
+  journal   = {Australasian Drama Studies},
+  year      = {1986},
+  volume    = {0},
+  number    = {8},
+  pages     = {49},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://www.proquest.com/openview/9dd5416f33047ddc44fbbfb44c6fd1e0/1},
+}
+
 @Article{Adamic2003,
   author    = {Adamic, L. A. and Adar, E.},
   title     = {Friends and neighbors on the Web},
@@ -6070,6 +6083,16 @@
   url       = {https://ieeexplore.ieee.org/document/7526900},
 }
 
+@Book{Billings2014,
+  title     = {Genealogy of the Tragic: Greek Tragedy and German Philosophy},
+  publisher = {Princeton University Press},
+  year      = {2014},
+  author    = {Billings, J.},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://www.jstor.org/stable/j.ctt9qgzxc},
+}
+
 @Book{Bilston2004,
   title     = {The Awkward Age in Women's Popular Fiction, 1850-1900},
   publisher = {Oxford University Press},
@@ -8992,6 +9015,16 @@
   timestamp = {2022.08.31},
 }
 
+@Book{Burroughs1997,
+  title     = {Closet Stages: Joanna Baillie and the Theater Theory of British Romantic Women Writers},
+  publisher = {University of Pennsylvania Press},
+  year      = {1997},
+  author    = {Burroughs, C.},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://www.jstor.org/stable/j.ctt16nzfzq},
+}
+
 @InCollection{Burrow1997,
   author    = {Burrow, C.},
   title     = {Virgils, from Dante to Milton},
@@ -9025,6 +9058,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.08},
   url       = {https://books.google.fr/books?id=VitaAAAAMAAJ},
+}
+
+@Article{Burrows1994,
+  author    = {Burrows, J. F. and Craig, D. H.},
+  title     = {Lyrical drama and the ``turbid mountebanks'': Styles of dialogue in romantic and renaissance tragedy},
+  journal   = {Computers and the Humanities},
+  year      = {1994},
+  volume    = {28},
+  number    = {2},
+  pages     = {63-86},
+  doi       = {10.1007/bf01830688},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
 }
 
 @Article{Burrows2002,
@@ -9112,6 +9158,38 @@
   owner     = {Vincent},
   timestamp = {2020.01.05},
   url       = {https://www.google.fr/books?id=NAl37jVv6ugC},
+}
+
+@InCollection{Burwick2004,
+  author    = {Burwick, F.},
+  title     = {Joanna Baillie, Matthew Baillie, and the Pathology of the Passions},
+  booktitle = {Joanna Baillie: Romantic Dramatist},
+  publisher = {Routledge},
+  year      = {2004},
+  pages     = {48-68},
+  doi       = {10.4324/9780203504451-4},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
+@Book{Burwick2009,
+  title     = {Romantic Drama: Acting and Reacting},
+  publisher = {Cambridge University Press},
+  year      = {2009},
+  author    = {Burwick, F.},
+  doi       = {10.1017/cbo9780511770500},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
+@Book{Burwick2022,
+  title     = {Time in Romantic Theatre},
+  publisher = {Springer},
+  year      = {2022},
+  author    = {Burwick, F.},
+  doi       = {10.1007/978-3-030-96079-7},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
 }
 
 @Article{Bushell2022,
@@ -9837,6 +9915,19 @@
   owner     = {Vincent},
   timestamp = {2022.01.01},
   url       = {https://aclanthology.org/2021.mrqa-1.13/},
+}
+
+@Article{Carney2000,
+  author    = {Carney, S.},
+  title     = {The Passion of Joanna Baillie: Playwright as Martyr},
+  journal   = {Theatre Journal},
+  year      = {2000},
+  volume    = {52},
+  number    = {2},
+  pages     = {227-252},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://www.jstor.org/stable/25068778},
 }
 
 @Article{Carney2014,
@@ -12101,6 +12192,16 @@
   timestamp = {2020.03.17},
 }
 
+@Book{Clery2004,
+  title     = {Women's Gothic: From Clara Reeve to Mary Shelley},
+  publisher = {Northcote House Publishers Ltd},
+  year      = {2004},
+  author    = {Clery, E. J.},
+  doi       = {10.2307/j.ctv5rf49t},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
 @Article{Clifford1994,
   author    = {Clifford, J.},
   title     = {Diasporas},
@@ -13077,6 +13178,16 @@
   owner     = {Vincent},
   timestamp = {2019.07.02},
   url       = {https://www.jstor.org/stable/2985181},
+}
+
+@Book{Cox1987,
+  title     = {In the Shadows of Romance: Romantic Tragic Drama in Germany, England, and France},
+  publisher = {Ohio University Press},
+  year      = {1987},
+  author    = {Cox, J. N.},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://books.google.fr/books/?id=NE1ZAAAAMAAJ},
 }
 
 @Article{Cozzo2013,
@@ -16696,6 +16807,19 @@
   url       = {https://www.jstor.org/stable/436121},
 }
 
+@Article{Dwyer2000,
+  author    = {Dwyer, K.},
+  title     = {Joanna Baillie's Plays on the Passions and the Spectacle of Medical Science},
+  journal   = {Studies in Eighteenth-Century Culture},
+  year      = {2000},
+  volume    = {29},
+  number    = {1},
+  pages     = {23–46},
+  doi       = {10.1353/sec.2010.0244},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
 @Book{Dzelzainis2011,
   title     = {The Politics of Paradise Lost},
   publisher = {Oxford University Press},
@@ -16739,6 +16863,16 @@
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://www.wiley.com/en-us/Literary+Theory%3A+An+Introduction%2C+2nd+Revised+Edition%2C+Anniversary+Edition-p-9781118306291},
+}
+
+@Book{Eagleton2003a,
+  title     = {Sweet Violence: The Idea of the Tragic},
+  publisher = {Blackwell},
+  year      = {2003},
+  author    = {Eagleton, T.},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://books.google.fr/books/?id=qSsAE8PkQtEC},
 }
 
 @Book{Eagleton2005,
@@ -18320,6 +18454,18 @@
   doi       = {10.1080/20512856.2016.1244909},
   owner     = {Vincent},
   timestamp = {2018.06.12},
+}
+
+@Article{Falk2020,
+  author    = {Falk, M.},
+  title     = {Sad Realities: The Romantic Tragedies of Charles Harpur},
+  journal   = {Romantic Textualities: Literature and Print Culture, 1780-1840},
+  year      = {2020},
+  volume    = {23},
+  pages     = {200-217},
+  doi       = {10.18573/romtext.65},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
 }
 
 @InBook{Falk2024a,
@@ -20388,6 +20534,16 @@
   timestamp = {2012.08.25},
 }
 
+@Book{Frye1968,
+  title     = {A Study of English Romanticism},
+  publisher = {Random House},
+  year      = {1968},
+  author    = {Frye, N.},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://books.google.fr/books/?id=8sQ0vwEACAAJ},
+}
+
 @InCollection{Frye1990,
   author    = {Frye, N.},
   title     = {Rhetorical Criticism: Theory of Genres},
@@ -20836,6 +20992,29 @@
   doi       = {10.1080/10635150490264680},
   owner     = {Vincent},
   timestamp = {2021.09.21},
+}
+
+@Book{Gamer2000,
+  title     = {Romanticism and the Gothic: Genre, Reception, and Canon Formation},
+  publisher = {Cambridge University Press},
+  year      = {2000},
+  author    = {Gamer, M.},
+  series    = {Cambridge Studies in Romanticism},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://cambridge.org/fr/universitypress/subjects/literature/english-literature-1700-1830/romanticism-and-gothic-genre-reception-and-canon-formation},
+}
+
+@InCollection{Gamer2020,
+  author    = {Gamer, M. and Saglia, D.},
+  title     = {Introduction: The Nineteenth Century: `Tragedy in the World'},
+  booktitle = {A Cultural History of Tragedy in the Age of Empire},
+  publisher = {Bloomsbury Academic},
+  year      = {2020},
+  pages     = {1-21},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://www.bloomsbury.com/us/cultural-history-of-tragedy-in-the-age-of-empire-9781474288071/},
 }
 
 @InProceedings{Gamon2004,
@@ -24999,6 +25178,16 @@
   timestamp = {2021.07.02},
 }
 
+@Book{Harpur1987,
+  title     = {Stalwart the Bushranger, with The Tragedy of Donohoe},
+  publisher = {Currency Press},
+  year      = {1987},
+  author    = {Harpur, C.},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://books.google.fr/books/?id=kuQIAQAAIAAJ},
+}
+
 @Book{Harrington2009,
   title     = {Third Person: Authoring and Exploring Vast Narratives},
   publisher = {MIT},
@@ -26284,6 +26473,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://hal.archives-ouvertes.fr/hal-00937632/},
 }
 
+@Article{Hoagwood1992,
+  author    = {Hoagwood, T.},
+  title     = {Prolegomenon for a Theory of Romantic Drama},
+  journal   = {Wordsworth Circle},
+  year      = {1992},
+  volume    = {23},
+  number    = {2},
+  pages     = {49-64},
+  doi       = {10.1086/twc24042423},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
 @TechReport{Hobbs1976,
   author      = {Hobbs, J.},
   title       = {Pronoun Resolution},
@@ -26421,6 +26623,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.12.28},
   url       = {https://dl.acm.org/doi/abs/10.5555/2381219.2381222},
+}
+
+@Article{Hoeveler2001,
+  author    = {Hoeveler, D. L.},
+  title     = {Joanna Baillie and the Gothic Body: Reading Extremities in Orra and De Monfort},
+  journal   = {Gothic Studies},
+  year      = {2001},
+  volume    = {3},
+  pages     = {117-133},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://epublications.marquette.edu/english_fac/88/},
 }
 
 @Book{Hoffmeier1999,
@@ -27953,6 +28167,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/icc.2011.5963147},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@InCollection{Imperiali2016,
+  author    = {Imperiali, I.},
+  title     = {From Darkness to Light: Science and Religion on Joanna Baillie's Stage},
+  booktitle = {Women's Romantic Theatre and Drama},
+  publisher = {Routledge},
+  year      = {2016},
+  pages     = {213-228},
+  doi       = {10.4324/9781315233482-13},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
 }
 
 @Article{Incitti2023,
@@ -30665,6 +30891,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.22},
 }
 
+@InCollection{Kelly1987,
+  author    = {Kelly, V. and Fotheringham, R.},
+  title     = {General Editors' Preface},
+  booktitle = {Stalwart the Bushranger, with The Tragedy of Donohoe, by Charles Harpur},
+  publisher = {Currency Press},
+  year      = {1987},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://catalogue.nla.gov.au/catalog/1613502},
+}
+
 @InCollection{Kelly2002,
   author    = {Kelly, J. P.},
   title     = {Murder Your Darlings: A Scientific Response to The Voice of Evidence in Reading Research},
@@ -32998,6 +33235,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.21},
 }
 
+@Article{Kucich1992,
+  author    = {Kucich, G.},
+  title     = {``A Haunted Ruin'': Romantic Drama, Renaissance Tradition, and the Critical Establishment},
+  journal   = {Wordsworth Circle},
+  year      = {1992},
+  volume    = {23},
+  number    = {2},
+  pages     = {64–76},
+  doi       = {10.1086/twc24042424},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
 @Article{Kudo2001,
   author    = {Kudo, H. and Dunbar, R. I. M.},
   title     = {Neocortex size and social network size in primates},
@@ -35091,6 +35341,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2023.11.29},
   url       = {https://dl.acm.org/doi/abs/10.5555/541921},
+}
+
+@Book{Lehmann2016,
+  title     = {Tragedy and Dramatic Theatre},
+  publisher = {Routledge},
+  year      = {2016},
+  author    = {Lehmann, H.-T.},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://www.routledge.com/Tragedy-and-Dramatic-Theatre/Lehmann/p/book/9781138191969},
 }
 
 @InProceedings{Lehnert1980,
@@ -37379,6 +37639,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.cpr.2008.04.001},
   owner     = {Vincent},
   timestamp = {2021.09.16},
+}
+
+@InCollection{LopezSzwydky2020,
+  author    = {Lopez Szwydky, L.},
+  title     = {Forms and Media},
+  booktitle = {A Cultural History of Tragedy in the Age of Empire},
+  publisher = {Bloomsbury Academic},
+  year      = {2020},
+  pages     = {23-43},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://www.bloomsbury.com/uk/cultural-history-of-tragedy-in-the-age-of-empire-9781350416802/},
 }
 
 @Article{Lospinoso2010,
@@ -40817,6 +41089,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/2011.13647},
 }
 
+@Article{Mellor1994,
+  author    = {Mellor, A. K.},
+  title     = {Joanna Baillie and the Counter-Public Sphere},
+  journal   = {Studies in Romanticism},
+  year      = {1994},
+  volume    = {33},
+  number    = {4},
+  pages     = {559},
+  doi       = {10.2307/25601086},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
 @Article{Meltzoff1990,
   author    = {Meltzoff, A. N.},
   title     = {Towards a Developmental Cognitive Science.},
@@ -43178,6 +43463,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.iaiai.org/journals/index.php/IJSKM/article/view/468},
 }
 
+@Book{Murdoch1993,
+  title     = {Metaphysics as a Guide to Morals},
+  publisher = {Penguin},
+  year      = {1993},
+  author    = {Murdoch, I.},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://archive.org/details/metaphysicsasgui00murd},
+}
+
 @Article{Murphet2010,
   author    = {Murphet, J.},
   title     = {`The Wire' and Realism},
@@ -43211,6 +43506,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.23},
   url       = {https://dh2017.adho.org/abstracts/352/352.pdf},
+}
+
+@Article{Murray2011,
+  author    = {Murray, J.},
+  title     = {At the Surface of Romantic Interiority: Joanna Baillie’s Orra},
+  journal   = {Romanticism and Victorianism on the Net},
+  year      = {2011},
+  number    = {56},
+  pages     = {0},
+  doi       = {10.7202/1001091ar},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
 }
 
 @Article{Murtagh2009,
@@ -43833,6 +44140,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=YO4EAAAAMAAJ},
 }
 
+@InCollection{Newey2020,
+  author    = {Newey, K.},
+  title     = {Sites of Performance and Circulation},
+  booktitle = {A Cultural History of Tragedy in the Age of Empire},
+  publisher = {Bloomsbury Academic},
+  year      = {2020},
+  pages     = {45-59},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://core.ac.uk/download/187118555.pdf},
+}
+
 @Book{Newlin1995,
   title     = {Everyone in Dickens},
   publisher = {Greenwood},
@@ -44414,6 +44733,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.vanhamel.nl/codecs/Nic_Ghiollamhaith_1981a},
 }
 
+@Book{Nicoll1970,
+  title     = {A History of English Drama 1660-1900},
+  publisher = {Cambridge University Press},
+  year      = {1970},
+  author    = {Nicoll, A.},
+  doi       = {10.1017/CBO9780511897757},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
 @Article{Nicosia2009,
   author    = {Nicosia, V. and Mangioni, G. and Carchiolo, V. and Malgeri, M.},
   title     = {Extending the definition of modularity to directed graphs with overlapping communities},
@@ -44938,6 +45267,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner       = {Vincent},
   timestamp   = {2022.08.11},
   url         = {https://www.semanticscholar.org/paper/Sizing-up-the-Hoosier-Mental-Lexicon%3A-Measuring-the-Nusbaum/d0dfc5be92a49e9de8d819d0a6e1aa8484d9e250},
+}
+
+@Book{Nussbaum2014,
+  title     = {The Challenge of Tragedy},
+  publisher = {Oxford University Press},
+  year      = {2014},
+  author    = {Nussbaum, F.},
+  series    = {Oxford Handbooks Online},
+  doi       = {10.1093/oxfordhb/9780199600304.013.028},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
 }
 
 @Book{NussbaumerKnaflic2015,
@@ -46923,6 +47263,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@Article{Perkins1973,
+  author    = {Perkins, E.},
+  title     = {Emerson and Charles Harpur},
+  journal   = {Australian Literary Studies},
+  year      = {1973},
+  volume    = {6},
+  number    = {1},
+  pages     = {82-88},
+  doi       = {10.20314/als.af2dc34792},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
 @Article{Peron2015,
   author    = {Péron, J. A. and Piolino, P. and Le Moal-Boursiquot, S. and Biseul, I. and Leray, E. and Bon, L. and Desgranges, B. and Eustache, F. and Belliard, S.},
   title     = {Preservation of Person-Specific Semantic Knowledge in Semantic Dementia: Does Direct Personal Experience Have a Specific Role?},
@@ -48632,6 +48985,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/43457910},
 }
 
+@InCollection{Quash2020,
+  author    = {Quash, B.},
+  title     = {Religion, Ritual and Myth},
+  booktitle = {A Cultural History of Tragedy in the Modern Age},
+  publisher = {Bloomsbury Publishing},
+  year      = {2020},
+  pages     = {93-108},
+  doi       = {10.5040/9781474208239.ch-005},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
 @Article{Quayum2015,
   author    = {Quayum, M. A.},
   title     = {Hindu-Muslim Relations in the Work of Rabindranath Tagore and Rokeya Sakhawat Hossain},
@@ -50088,6 +50453,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.2307/1773039},
   owner     = {Vincent},
   timestamp = {2020.07.25},
+}
+
+@Book{Richardson1988,
+  title     = {A Mental Theatre: Poetic Drama and Consciousness in the Romantic Age},
+  publisher = {Princeton University Press},
+  year      = {1988},
+  author    = {Richardson, A.},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://www.psupress.org/books/titles/0-271-00612-9.html},
+}
+
+@InCollection{Richardson2004,
+  author    = {Richardson, A.},
+  title     = {A neural theatre: Joanna Baillie's ``Plays on the Passions''},
+  booktitle = {Joanna Baillie, Romantic Dramatist},
+  publisher = {Routledge},
+  year      = {2004},
+  pages     = {130-145},
+  doi       = {10.4324/9780203504451-8},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
 }
 
 @InCollection{Richardson2007,
@@ -56167,6 +56554,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2741067},
 }
 
+@Article{SparkJones1972,
+  author    = {Spark Jones, K.},
+  title     = {A statistical interpretation of term specificity and its application in retrieval},
+  journal   = {Journal of Documentation},
+  year      = {1972},
+  volume    = {28},
+  number    = {1},
+  pages     = {11–21},
+  doi       = {10.1108/eb026526},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
 @Article{Sparrow1991,
   author    = {Sparrow, M. K.},
   title     = {The application of network analysis to criminal intelligence: An assessment of the prospects},
@@ -56662,6 +57062,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/10.7591/j.ctt1g69xpg},
 }
 
+@Book{Steiner1995a,
+  title     = {The Death of Tragedy},
+  publisher = {Faber},
+  year      = {1995},
+  author    = {Steiner, G.},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://ia802703.us.archive.org/27/items/SteinerGeorge_201504/Steiner%2C%20George%20-%20Death%20of%20Tragedy%20%28Oxford%2C%201980%29.pdf},
+}
+
+@Article{Steiner2004,
+  author    = {Steiner, G.},
+  title     = {||Tragedy,'' Reconsidered},
+  journal   = {New Literary History},
+  year      = {2004},
+  volume    = {35},
+  number    = {1},
+  pages     = {1–15},
+  doi       = {10.1353/nlh.2004.0024},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
 @Article{Steiner2015,
   author    = {Steiner, T.},
   title     = {Steering the Author Discourse: The Construction of Authorship in Quality TV and the Case of Game of Thrones},
@@ -57050,6 +57473,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cvprw.2008.4562956},
   owner     = {Vincent},
   timestamp = {2019.03.22},
+}
+
+@Article{Stone2024,
+  author    = {Stone, A.},
+  title     = {Joanna Baillie's Theory of Tragedy},
+  journal   = {Journal of Aesthetic Education},
+  year      = {2024},
+  volume    = {58},
+  number    = {1},
+  pages     = {25-45},
+  doi       = {10.5406/15437809.58.1.02},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
 }
 
 @Book{Storey1995,
@@ -60461,6 +60897,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/2003.08811},
 }
 
+@InCollection{VanKooy2020,
+  author    = {Van Kooy, D.},
+  title     = {Society and Family},
+  booktitle = {A Cultural History of Tragedy in the Age of Empire},
+  publisher = {Bloomsbury Academic},
+  year      = {2020},
+  pages     = {121-138},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://bloomsbury.com/uk/cultural-history-of-tragedy-in-the-age-of-empire-9781350416802/},
+}
+
 @Article{VanLierde2019,
   author    = {Van Lierde, Hadrien and Chen, G. and Chow, Tommy W. S.},
   title     = {Scalable Spectral Clustering for Overlapping Community Detection in Large-Scale Networks},
@@ -62021,6 +62469,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.02},
 }
 
+@Book{Ward1963a,
+  title     = {John Keats: The Making of a Poet},
+  publisher = {Secker \& Warburg},
+  year      = {1963},
+  author    = {Ward, A.},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://books.google.fr/books/?id=Vt2Y0AEACAAJ},
+}
+
 @Book{Ware2008,
   title     = {Visual Thinking for Design},
   publisher = {Morgan Kaufmann},
@@ -62957,6 +63415,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.29},
   url       = {https://www.jstor.org/stable/1347291},
+}
+
+@Book{Williams1966,
+  title     = {Modern Tragedy},
+  publisher = {Chatto and Windus},
+  year      = {1966},
+  author    = {Williams, R.},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://broadviewpress.com/product/modern-tragedy/#tab-description},
 }
 
 @Book{Williams1975,
