--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -19931,6 +19931,19 @@
   timestamp = {2022.06.21},
 }
 
+@Article{Foster1996,
+  author    = {Foster, D. W.},
+  title     = {A Funeral Elegy: W[illiam] S[hakespeare]'s ``Best-Speaking Witnesses''},
+  journal   = {Publications of the Modern Language Association of America},
+  year      = {1996},
+  volume    = {111},
+  number    = {5},
+  pages     = {1080-1105},
+  doi       = {10.2307/463152},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
+}
+
 @Article{Foster2004,
   author    = {Foster, E. K.},
   title     = {Research on Gossip: Taxonomy, Methods, and Future Directions},
@@ -21883,6 +21896,17 @@
   doi       = {10.1016/j.socnet.2021.04.004},
   owner     = {Vincent},
   timestamp = {2021.04.29},
+}
+
+@InProceedings{Ghoniem2004,
+  author    = {Ghoniem, M. and Fekete, J.-D. and Castagliola, P.},
+  title     = {A Comparison of the Readability of Graphs Using Node-Link and Matrix-Based Representations},
+  booktitle = {IEEE Symposium on Information Visualization},
+  year      = {2004},
+  pages     = {17-24},
+  doi       = {10.1109/infvis.2004.1},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
 }
 
 @Article{Ghoniem2005,
@@ -25234,6 +25258,17 @@
   url       = {https://global.oup.com/academic/product/shakespeare-and-literary-theory-9780199573387},
 }
 
+@Electronic{Harrison2007,
+  author       = {Harrison, C.},
+  year         = {2007},
+  title        = {BibleViz: Biblical Social Network (people and places)},
+  howpublished = {\url{https://www.chrisharrison.net/index.php/Visualizations/BibleViz}},
+  organization = {Carnegie Mellon University},
+  url          = {https://www.chrisharrison.net/index.php/Visualizations/BibleViz},
+  owner        = {Vincent},
+  timestamp    = {2024.06.02},
+}
+
 @Article{Harrison2017,
   author    = {Harrison, S.-M.},
   title     = {Global Sisyphus: Rereading the Jamaican 1960s through A Brief History of Seven Killings},
@@ -26635,6 +26670,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2024.06.01},
   url       = {https://epublications.marquette.edu/english_fac/88/},
+}
+
+@InProceedings{Hoffman1997,
+  author    = {Hoffman, P. and Grinstein, G. and Marx, K. and Grosse, I. and Stanley, E.},
+  title     = {DNA visual and analytic data mining},
+  booktitle = {IEEE Conference on Visualization},
+  year      = {1997},
+  pages     = {437-441},
+  doi       = {10.1109/visual.1997.663916},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
 }
 
 @Book{Hoffmeier1999,
@@ -29046,6 +29092,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/02701960.2012.737387},
   owner     = {Vincent},
   timestamp = {2023.11.25},
+}
+
+@Article{Jarukasemratana2013a,
+  author    = {Jarukasemratana, S. and Murata, T.},
+  title     = {Recent large graph visualization tools: a review},
+  journal   = {Information and Media Technologies},
+  year      = {2013},
+  volume    = {8},
+  number    = {4},
+  pages     = {944-960},
+  doi       = {10.11185/imt.8.944},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
 }
 
 @InProceedings{Jassem2017,
@@ -32981,6 +33040,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://aclweb.org/anthology/papers/L/L08/L08-1249/},
 }
 
+@InProceedings{Kreuseler2000,
+  author    = {Kreuseler, M. and Lopez, N. and Schumann, H.},
+  title     = {A scalable framework for information visualization},
+  booktitle = {IEEE Symposium on Information Visualization},
+  year      = {2000},
+  pages     = {27-36},
+  doi       = {10.1109/infvis.2000.885088},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
+}
+
 @Article{Kriegeskorte2019,
   author    = {Kriegeskorte, N. and Diedrichsen, J.},
   title     = {Peeling the Onion of Brain Representations},
@@ -35351,6 +35421,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2024.06.01},
   url       = {https://www.routledge.com/Tragedy-and-Dramatic-Theatre/Lehmann/p/book/9781138191969},
+}
+
+@Article{Lehmann2016a,
+  author    = {Lehmann, D. J. and Theisel, H.},
+  title     = {General Projective Maps for Multidimensional Data Projection},
+  journal   = {Computer Graphics Forum},
+  year      = {2016},
+  volume    = {35},
+  number    = {2},
+  pages     = {443-453},
+  doi       = {10.1111/cgf.12845},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
 }
 
 @InProceedings{Lehnert1980,
@@ -44992,6 +45075,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aclweb.org/anthology/L16-1262},
 }
 
+@InProceedings{Noack2004,
+  author    = {Noack, A.},
+  title     = {An Energy Model for Visual Graph Clustering},
+  booktitle = {11th International Symposium on Graph Drawing},
+  year      = {2004},
+  volume    = {2912},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {425-436},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-540-24595-7_40},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
+}
+
 @Article{Noack2009,
   author    = {Noack, A.},
   title     = {Modularity clustering is force-directed layout},
@@ -51831,6 +51928,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2014.06.14},
 }
 
+@Article{Rubio-Sanchez2016,
+  author    = {Rubio-Sanchez, M. and Raya, L. and Diaz, F. and Sanchez, A.},
+  title     = {A comparative study between RadViz and Star Coordinates},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2016},
+  volume    = {22},
+  number    = {1},
+  pages     = {619–628},
+  doi       = {10.1109/tvcg.2015.2467324},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
+}
+
 @InProceedings{Rubner1998,
   author    = {Rubner, Y. and Tomasi, C. and Guibas, L. J.},
   title     = {A metric for distributions with applications to image databases},
@@ -56698,6 +56808,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.01.09},
 }
 
+@Book{Spurgeon1935,
+  title     = {Shakespeare's Imagery and What It Tells Us},
+  publisher = {Cambridge University Press},
+  year      = {1935},
+  author    = {Spurgeon, C. F. E.},
+  doi       = {10.1017/CBO9780511620393},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
+}
+
 @InProceedings{Srinivasan2021,
   author    = {Srinivasan, B. and Zheng, D. and Karypis, G.},
   title     = {Learning over Families of Sets - Hypergraph Representation Learning for Higher Order Tasks},
@@ -59015,6 +59135,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2023.08.12},
   url       = {https://data.bnf.fr/12048639/lucien_tesniere_elements_de_syntaxe_structurale/fr.pdf},
+}
+
+@Article{Theisel1998,
+  author    = {Theisel, H. and Kreuseler, M.},
+  title     = {An Enhanced Spring Model for Information Visualization},
+  journal   = {Computer Graphics Forum},
+  year      = {1998},
+  volume    = {17},
+  number    = {3},
+  pages     = {335–344},
+  doi       = {10.1111/1467-8659.00280},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
 }
 
 @Article{Thelwall2016,
@@ -63846,6 +63979,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.12},
 }
 
+@InProceedings{Wolf2020,
+  author    = {Wolf, T. and Debut, L. and Sanh, V. and Chaumond, J. and Delangue, C. and Moi, A. and Cistac, P. and Rault, T. and Louf, R. and Funtowicz, M. and Davison, J. and Shleifer, S. and von Platen, P. and Ma, C. and Jernite, Y. and Plu, J. and Xu, C. and Le Scao, T. and Gugger, S. and Drame, M. and Lhoest, Q. and Rush, A.},
+  title     = {Transformers: State-of-the-Art Natural Language Processing},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2020},
+  pages     = {38-45},
+  doi       = {10.18653/v1/2020.emnlp-demos.6},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
+}
+
 @InProceedings{Wolfe2000,
   author    = {Wolfe, J. L.},
   title     = {Effects of annotations on student readers and writers},
@@ -64597,7 +64741,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Yamada2009,
   author    = {Yamada, M. and Murai, Y.},
-  title     = {Story visualization of literary works},
+  title     = {Story visualization of literary works: How a computer reads {S}hakespeare's plays},
   journal   = {Journal of Visualization},
   year      = {2009},
   volume    = {12},
@@ -65482,6 +65626,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.19},
   url       = {https://www.cc.gatech.edu/~riedl/pubs/jogd.pdf},
+}
+
+@Article{Young2018,
+  author    = {Young, T. and Hazarika, D. and Poria, S. and Cambria, E.},
+  title     = {Recent Trends in Deep Learning Based Natural Language Processing [Review Article]},
+  journal   = {IEEE Computational Intelligence Magazine},
+  year      = {2018},
+  volume    = {13},
+  number    = {3},
+  pages     = {55-75},
+  doi       = {10.1109/mci.2018.2840738},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
 }
 
 @Electronic{Young2019,
