--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -5022,6 +5022,17 @@
   url       = {https://gallica.bnf.fr/ark:/12148/bpt6k5652722f/texteBrut},
 }
 
+@InProceedings{Beltagy2019,
+  author    = {Beltagy, I. and Lo, K. and Cohan, A.},
+  title     = {{SciBERT}: A Pretrained Language Model for Scientific Text},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing / 9th International Joint Conference on Natural Language Processing},
+  year      = {2019},
+  pages     = {3615-3620},
+  doi       = {10.18653/v1/d19-1371},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
+}
+
 @InCollection{Bemong2010,
   author    = {Bemong, N. and Borghart, P.},
   title     = {State of the Art},
@@ -13423,6 +13434,19 @@
   timestamp = {2019.03.15},
 }
 
+@Article{Cui2022,
+  author    = {Cui, S. and Joe, I.},
+  title     = {A multi-head adjacent attention-based pyramid layered model for nested named entity recognition},
+  journal   = {Neural Computing and Applications},
+  year      = {2022},
+  volume    = {35},
+  number    = {3},
+  pages     = {2561–2574},
+  doi       = {10.1007/s00521-022-07747-8},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
+}
+
 @Electronic{Cukier2013,
   author       = {Cukier, J.},
   month        = {05},
@@ -17398,6 +17422,17 @@
   timestamp = {2020.08.11},
 }
 
+@InProceedings{ElBoukkouri2022,
+  author    = {El Boukkouri, H. and Ferret, O. and Lavergne, T. and Zweigenbaum, P.},
+  title     = {Re-train or train from scratch? comparing pre-training strategies of BERT in the medical domain},
+  booktitle = {13th Language Resources and Evaluation Conference},
+  year      = {2022},
+  pages     = {2626-2633},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
+  url       = {https://aclanthology.org/2022.lrec-1.281/},
+}
+
 @InProceedings{Elenberg2015,
   author    = {Elenberg, E. R. and Shanmugam, K. and Borokhovich, M. and Dimakis, A. G.},
   title     = {Beyond Triangles: A Distributed Framework for Estimating 3-profiles of Large Graphs},
@@ -17732,6 +17767,17 @@
   doi       = {10.1109/tvcg.2015.2468078},
   owner     = {Vincent},
   timestamp = {2022.07.09},
+}
+
+@InProceedings{Emelyanov2019,
+  author    = {Emelyanov, A. and Artemova, E.},
+  title     = {Multilingual Named Entity Recognition Using Pretrained Embeddings, Attention Mechanism and NCRF},
+  booktitle = {7th Workshop on Balto-Slavic Natural Language Processing},
+  year      = {2019},
+  pages     = {94-99},
+  doi       = {10.18653/v1/w19-3713},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
 }
 
 @Article{Emirbayer1997,
@@ -24238,6 +24284,17 @@
   doi       = {10.1016/j.jbi.2012.04.008},
   owner     = {Vincent},
   timestamp = {2024.04.24},
+}
+
+@InProceedings{Gururangan2020,
+  author    = {Gururangan, S. and Marasović, A. and Swayamdipta, S. and Lo, K. and Beltagy, I. and Downey, D. and Smith, N. A.},
+  title     = {Don't Stop Pretraining: Adapt Language Models to Domains and Tasks},
+  booktitle = {58th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2020},
+  pages     = {8342-8360},
+  doi       = {10.18653/v1/2020.acl-main.740},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
 }
 
 @Article{Gutmann2012,
@@ -34116,6 +34173,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://aclanthology.org/2022.lrec-1.43/},
 }
 
+@InProceedings{Lamproudis2023,
+  author    = {Lamproudis, A. and Henriksson, A.},
+  title     = {On the Impact of the Vocabulary for Domain-Adaptive Pretraining of Clinical Language Models},
+  booktitle = {15th International Joint Conference on Biomedical Engineering Systems and Technologies},
+  year      = {2023},
+  series    = {Communications in Computer and Information Science},
+  pages     = {315-332},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-031-38854-5_16},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
+}
+
 @Book{Lancaster1979,
   title     = {The Korean Buddhist Canon: A Descriptive Catalogue},
   publisher = {Berkeley University Press},
@@ -35163,6 +35233,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1371/journal.pone.0204430},
   owner     = {Vincent},
   timestamp = {2020.01.02},
+}
+
+@Article{Lee2019,
+  author    = {Lee, J. and Yoon, W. and Kim, S. and Kim, D. and Kim, S. and So, C. H. and Kang, J.},
+  title     = {{BioBERT}: a pre-trained biomedical language representation model for biomedical text mining},
+  journal   = {Bioinformatics},
+  year      = {2019},
+  volume    = {36},
+  number    = {4},
+  pages     = {1234–1240},
+  doi       = {10.1093/bioinformatics/btz682},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
 }
 
 @InProceedings{Lee2019b,
@@ -37447,6 +37530,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1371/journal.pone.0228579},
   owner     = {Vincent},
   timestamp = {2022.11.09},
+}
+
+@InProceedings{Liu2020b,
+  author    = {Liu, Z. and Huang, D. and Huang, K. and Li, Z. and Zhao, J.},
+  title     = {{FinBERT}: A Pre-trained Financial Language Representation Model for Financial Text Mining},
+  booktitle = {29th International Joint Conference on Artificial Intelligence},
+  year      = {2020},
+  pages     = {4513-4519},
+  doi       = {10.24963/ijcai.2020/622},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
 }
 
 @InProceedings{Liu2020h,
@@ -45628,6 +45722,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.11.30},
 }
 
+@InProceedings{Oliveira2022,
+  author    = {de Oliveira, L. F. A. and Pagano, A. and Silva e Oliveira, L. E. and Moro, C.},
+  title     = {Challenges in Annotating a Treebank of Clinical Narratives in Brazilian Portuguese},
+  booktitle = {15th International Conference Computational Processing of the Portuguese Language},
+  year      = {2022},
+  volume    = {13208},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {90-100},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-98305-5_9},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
+}
+
 @Article{Oliver1993,
   author    = {Oliver, M. B.},
   title     = {Exploring the Paradox of the Enjoyment of Sad Films},
@@ -49009,6 +49117,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.11.08},
 }
 
+@Article{Qiu2020,
+  author    = {Qiu, X. and Sun, T. and Xu, Y. and Shao, Y. and Dai, N. and Huang, X.},
+  title     = {Pre-trained models for natural language processing: A survey},
+  journal   = {Science China Technological Sciences},
+  year      = {2020},
+  volume    = {63},
+  number    = {10},
+  pages     = {1872-1897},
+  doi       = {10.1007/s11431-020-1647-3},
+  owner     = {Vincent},
+  timestamp = {2022.03.27},
+}
+
 @Article{Qu2015,
   author    = {Qu, W. and Zhang, Y. and Wang, D. and Feng, S. and Yu, G.},
   title     = {Semantic movie summarization based on string of {IE}-{RoleNets}},
@@ -51317,6 +51438,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.4324/9781003343196},
   owner     = {Vincent},
   timestamp = {2024.04.27},
+}
+
+@InProceedings{Rodrigues2022,
+  author    = {Rodrigues, R. B. M. and Privatto, P. I. M. and de Sousa, G. J. and Murari, R. P. and Afonso, L. C. S. and Papa, J. P. and Pedronette, D. C. G. and Guilherme, I. R. and Perrout, S. R. and Riente, A. F.},
+  title     = {{PetroBERT}: A Domain Adaptation Language Model for Oil and Gas Applications in Portuguese},
+  booktitle = {15th International Conference on Computational Processing of the Portuguese Language},
+  year      = {2022},
+  volume    = {13208},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {101-109},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-98305-5_10},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
+}
+
+@Article{Rodriguez2023,
+  author    = {Rodríguez, D. A. and Diaz-Escobar, J. and Díaz-Ramírez, A. and Trujillo, L.},
+  title     = {Domain-adaptive pre-training on a BERT model for the automatic detection of misogynistic tweets in Spanish},
+  journal   = {Social Network Analysis and Mining},
+  year      = {2023},
+  volume    = {13},
+  pages     = {126},
+  doi       = {10.1007/s13278-023-01128-2},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
 }
 
 @Article{Rodriguez-Planas2018,
@@ -54332,6 +54479,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.routledge.com/Semantic-Network-Analysis-in-Social-Sciences/Segev/p/book/9780367636524},
 }
 
+@InProceedings{Segura-Bedmar2013,
+  author    = {Segura-Bedmar, I. and Martínez, P. and Herrero-Zazo, M.},
+  title     = {Semeval-2013 task 9 : Extraction of drug-drug interactions from biomedical texts (ddiextraction 2013)},
+  booktitle = {7th International Workshop on Semantic Evaluation},
+  year      = {2013},
+  pages     = {341-350},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
+  url       = {https://aclanthology.org/S13-2056/},
+}
+
 @Article{Seidman1981,
   author    = {Seidman, S. A.},
   title     = {On the contributions of music to media productions},
@@ -55424,6 +55582,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.5753/isys.2022.2411},
   owner     = {Vincent},
   timestamp = {2024.04.20},
+}
+
+@Article{Silva2022b,
+  author    = {Silva, M. O. and Scofield, C. and De Melo-Gomes, L. and Moro, M. M.},
+  title     = {Cross-collection Dataset of Public Domain Portuguese-language Works},
+  journal   = {Journal of Information and Data Management},
+  year      = {2022},
+  volume    = {13},
+  number    = {1},
+  pages     = {95-110},
+  doi       = {10.5753/jidm.2022.2349},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
 }
 
 @InProceedings{Silva2023,
@@ -61995,6 +62166,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aaai.org/Library/ICWSM/icwsm15contents.php},
 }
 
+@InProceedings{WagnerFilho2018,
+  author    = {Wagner Filho, J. A. and Wilkens, R. and Idiart, M. and Villavicencio, A.},
+  title     = {The {brWaC} corpus: A new open resource for brazilian portuguese},
+  booktitle = {11th International Conference on Language Resources and Evaluation},
+  year      = {2018},
+  pages     = {4339-4344},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
+  url       = {https://aclanthology.org/L18-1686/},
+}
+
 @Book{Wainwright_2016,
   title     = {Game Theory and Postwar American Literature},
   publisher = {Palgrave Macmillan},
@@ -67206,6 +67388,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/2023.findings-emnlp.677},
   owner     = {Vincent},
   timestamp = {2024.04.24},
+}
+
+@Article{Zhuang2021,
+  author    = {Zhuang, F. and Qi, Z. and Duan, K. and Xi, D. and Zhu, Y. and Zhu, H. and Xiong, H. and He, Q.},
+  title     = {A Comprehensive Survey on Transfer Learning},
+  journal   = {Proceedings of the IEEE},
+  year      = {2021},
+  volume    = {109},
+  number    = {1},
+  pages     = {43–76},
+  doi       = {10.1109/jproc.2020.3004555},
+  owner     = {Vincent},
+  timestamp = {2024.06.02},
 }
 
 @InProceedings{Zilio2022,
